--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
       </div>
     </header>
     <main>
-      <div class="sobreNosotras1">
-        <img src="img/perro1.jpeg" alt="" id="fotoPerfil1"/>
+        <img class="imageProfile" src="/img/fotoJeni.jpeg" alt="" id="fotoPerfil1"/>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis
-          laboriosam praesentium similique eius animi exercitationem placeat
-          quos tenetur est pariatur? Quos consequatur pariatur est provident
-          ipsa ducimus exercitationem consequuntur sapiente!
+          Mi nombre es Jenifer Moyano Sanromá, tengo 17 años y soy de Barcelona-España, cuando tenía 6 años me mude junto a mi familia a Ecuador (el país de mi padre) y volví después de 11 años. 
         </p>
-      </div>
       <div class="sobreNosotras2">
-        <img src="" alt="" />
+        <img src="" alt="" id="fotoPerfil2"/>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis rem
           dignissimos iusto, delectus quia a voluptatibus, dolorem ea earum sint
