update about us

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
       </div>
     </header>
     <main>
-        <img class="imageProfile" src="/img/fotoJeni.jpeg" alt="" id="fotoPerfil1"/>
+      <div class="aboutUs">
+        <div class="aboutUsJeni">
+        <img class="imageProfile" src="/img/photoJeni1.jpeg" alt="profile picture Jeni"/>
         <p>
-          Mi nombre es Jenifer Moyano Sanromá, tengo 17 años y soy de Barcelona-España, cuando tenía 6 años me mude junto a mi familia a Ecuador (el país de mi padre) y volví después de 11 años. 
+          Mi nombre es Jenifer Moyano Sanromá, tengo 17 años y soy de Barcelona-España, cuando tenía 6 años 
+          me mude junto a mi familia a Ecuador (el país de mi padre) y volví después de 11 años. 
         </p>
-      <div class="sobreNosotras2">
-        <img src="" alt="" id="fotoPerfil2"/>
+        </div>
+        <div class="aboutUsInma">
+        <img class="imageProfile" src="img/photoInma.jpg" alt="profile picture Inma"/>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis rem
           dignissimos iusto, delectus quia a voluptatibus, dolorem ea earum sint
@@ -26,6 +30,7 @@
           blanditiis.
         </p>
       </div>
+    </div>
       <div class="aficiones"></div>
       <div class="mascotas"></div>
     </main>
