list of hobbies and pets

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <div class="aboutUs">
         <div class="aboutUsJeni">
-        <img class="imageProfile" src="/img/photoJeni1.jpeg" alt="profile picture Jeni"/>
+        <img class="imageProfile" src="/img/photoJeni.jpeg" alt="profile picture Jeni"/>
         <p>
           Mi nombre es Jenifer Moyano Sanromá, tengo 17 años y soy de Barcelona-España, cuando tenía 6 años 
           me mude junto a mi familia a Ecuador (el país de mi padre) y volví después de 11 años. 
@@ -31,8 +31,31 @@
         </p>
       </div>
     </div>
+
       <div class="aficiones"></div>
+      <p>Aficiones de Jenifer</p>
+      <ul>
+        <li>Escuchar música</li>
+        <li>Leer</li>
+        <li>Ver anime/manga</li>
+      </ul>
+
+      <p>Aficiones de Inma</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
       <div class="mascotas"></div>
+      <p>Mascotas de Jenifer</p>
+      <ul>
+        <li>Niña (7 años), es mi perrita french poodle mini, su pelaje es negro con el pecho color blanco.</li>
+        <li>Luna (10 años), es la perrita de mi abuela </li>
+
+      </ul>
+
+
     </main>
     <footer></footer>
   </body>
