structure and css header

--- a/index.html
+++ b/index.html
@@ -8,54 +8,70 @@
   </head>
   <body>
     <header>
-      <div class="header">
-        <h1>Bienvenidos</h1>
+      <div class="title">
+        <h1>Welcome</h1>
+      </div>
+      <div class="anchors">
+        <div><a href="">Hobbies</a></div>
+        <div><a href="#hobbies">Hobbies</a></div>
+        <div><a href="">Pets</a></div>
       </div>
     </header>
     <main>
       <div class="aboutUs">
         <div class="aboutUsJeni">
-        <img class="imageProfile" src="/img/photoJeni.jpeg" alt="profile picture Jeni"/>
-        <p>
-          Mi nombre es Jenifer Moyano Sanromá, tengo 17 años y soy de Barcelona-España, cuando tenía 6 años 
-          me mude junto a mi familia a Ecuador (el país de mi padre) y volví después de 11 años. 
-        </p>
+          <img
+            class="imageProfile"
+            src="/img/photoJeni.jpeg"
+            alt="profile picture Jeni"
+          />
+          <p>
+            Mi nombre es Jenifer Moyano Sanromá, tengo 17 años y soy de
+            Barcelona-España, cuando tenía 6 años me mude junto a mi familia a
+            Ecuador (el país de mi padre) y volví después de 11 años.
+          </p>
         </div>
         <div class="aboutUsInma">
-        <img class="imageProfile" src="img/photoInma.jpg" alt="profile picture Inma"/>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis rem
-          dignissimos iusto, delectus quia a voluptatibus, dolorem ea earum sint
-          nostrum ullam nam excepturi, facilis eum nesciunt fugit ipsum
-          blanditiis.
-        </p>
+          <img
+            class="imageProfile"
+            src="img/photoInma.jpg"
+            alt="profile picture Inma"
+          />
+          <p>
+            Mi nombre es Inma y actualmente tengo 21 años, estudié artes en la
+            Escuela de San Telmo y entre en la carrera de Diseño gráfico la cual
+            deje, al año empece a estudiar por mi cuenta algunos lenguajes y a
+            los 19 entre en un ciclo superior de Desarrollo de Aplicaciones Web.
+          </p>
+        </div>
       </div>
-    </div>
 
-      <div class="aficiones"></div>
-      <p>Aficiones de Jenifer</p>
-      <ul>
-        <li>Escuchar música</li>
-        <li>Leer</li>
-        <li>Ver anime/manga</li>
-      </ul>
-
-      <p>Aficiones de Inma</p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <div class="hobbiesJeni" id="hobbies">
+        <p>Aficiones de Jenifer</p>
+        <ul>
+          <li>Escuchar música</li>
+          <li>Leer</li>
+          <li>Ver anime/manga</li>
+        </ul>
+      </div>
+      <div class="hobbiesInma">
+        <p>Aficiones de Inma</p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
 
       <div class="mascotas"></div>
       <p>Mascotas de Jenifer</p>
       <ul>
-        <li>Niña (7 años), es mi perrita french poodle mini, su pelaje es negro con el pecho color blanco.</li>
-        <li>Luna (10 años), es la perrita de mi abuela </li>
-
+        <li>
+          Niña (7 años), es mi perrita french poodle mini, su pelaje es negro
+          con el pecho color blanco.
+        </li>
+        <li>Luna (10 años), es la perrita de mi abuela</li>
       </ul>
-
-
     </main>
     <footer></footer>
   </body>
