--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
-    <title>Document</title>
+    <title>Inma y Jenifer</title>
   </head>
   <body>
     <header>
@@ -62,16 +62,21 @@
           <li></li>
         </ul>
       </div>
-
-      <div class="mascotas"></div>
+      
+      <h3>Nuestras mascotas</h3>
       <p>Mascotas de Jenifer</p>
-      <ul>
-        <li>
-          Niña (7 años), es mi perrita french poodle mini, su pelaje es negro
-          con el pecho color blanco.
-        </li>
-        <li>Luna (10 años), es la perrita de mi abuela</li>
-      </ul>
+      <div class="pets">
+        <img src="/img/photoNiña.jpg" 
+        alt="foto de la perrita de Jenifer llamada Niña, raza french poodle 
+        mini de pelaje color negro y con el pecho de color blanco">
+        <p>
+          La perrita de Jenifer se llama Niña, tiene 8 años y su raza es 
+          french poodle mini de pelaje color negro y con el pecho de color blanco.
+          Es una perrita muy juguetona y a la vez muy dormilona. Aunque coma de 
+          todo, la cosa que más le gusta es el pollo.
+        </p>
+      </div>
+
     </main>
     <footer></footer>
   </body>
