add css to header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
-    <title>Inma y Jenifer</title>
+    <title>Inma & Jenifer</title>
   </head>
   <body>
     <header>
@@ -12,13 +12,14 @@
         <h1>Welcome</h1>
       </div>
       <div class="anchors">
-        <div><a href="">Hobbies</a></div>
-        <div><a href="#hobbies">Hobbies</a></div>
-        <div><a href="">Pets</a></div>
+        <div class="anchor1"><a href="#aboutUs">About Us</a></div>
+        <div class="anchor2"><a href="#hobbies">Hobbies</a></div>
+        <div class="anchor3"><a href="#pets">Pets</a></div>
       </div>
     </header>
     <main>
-      <div class="aboutUs">
+      <div class="aboutUs" id="aboutUs">
+        <h2>About Us</h2>
         <div class="aboutUsJeni">
           <img
             class="imageProfile"
@@ -65,7 +66,7 @@
       
       <h3>Nuestras mascotas</h3>
       <p>Mascotas de Jenifer</p>
-      <div class="pets">
+      <div class="pets" id="pets">
         <img src="/img/photoNiña.jpg" 
         alt="foto de la perrita de Jenifer llamada Niña, raza french poodle 
         mini de pelaje color negro y con el pecho de color blanco">
