adding the footer to the page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,33 @@
         </p>
       </div>
 
+      <p>Mascotas de Inma</p>
+      <div class="pets" id="pets">
+        <img src="/img/petRyu.jpeg" 
+        alt="...">
+        <p>
+          (Ryu)
+        </p>
+        <img src="/img/petPancho.jpg" 
+        alt="...">
+        <p>
+          (Pancho)
+        </p>
+        <img src="/img/petBael.jpeg" 
+        alt="...">
+        <p>
+          (Bael)
+        </p>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <br>
+      <h3>Contáctanos:</h3>
+      <a href="mailto:inmagonzalez045@gmail.com">Inma: inmagonzalez045@gmail.com</a>
+      <br>
+      <a href="mailto:jenifermoyano2006@gmail.com">Jenifer: jenifermoyano2006@gmail.com</a>
+      <br>
+      <p>Inma y Jenifer © 2024. xd</p>
+    </footer>
   </body>
 </html>
