add css to hobbies

--- a/index.html
+++ b/index.html
@@ -46,24 +46,26 @@
           </p>
         </div>
       </div>
-
+      <h2>Our Hobbies</h2>
+      <div class="hobbies">
       <div class="hobbiesJeni" id="hobbies">
-        <p>Aficiones de Jenifer</p>
+        <p class="pHobbies">Aficiones de Jenifer</p>
         <ul>
           <li>Escuchar música</li>
           <li>Leer</li>
           <li>Ver anime/manga</li>
+          <li>Escribir</li>
         </ul>
       </div>
       <div class="hobbiesInma">
-        <p>Aficiones de Inma</p>
+        <p class="pHobbies">Aficiones de Inma</p>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Tocar la guitarra</li>
+          <li>Pintar</li>
+          <li>Ver series</li>
         </ul>
       </div>
-      
+    </div>
       <h3>Nuestras mascotas</h3>
       <p>Mascotas de Jenifer</p>
       <div class="pets" id="pets">
