add css to pets

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
           <li>Ver series</li>
         </ul>
       </div>
-    </div>
-      <h3>Nuestras mascotas</h3>
-      <p>Mascotas de Jenifer</p>
-      <div class="pets" id="pets">
-        <img src="/img/photoNiña.jpg" 
+    </div>i
+      <h2>Our Pets</h2>
+      <h2>Mascotas de Jenifer</h2>
+      <div class="petNina" id="pets">
+        <img src="/img/photoNiña.jpg" id="photoNina"
         alt="foto de la perrita de Jenifer llamada Niña, raza french poodle 
         mini de pelaje color negro y con el pecho de color blanco">
-        <p>
+        <p id="pNina">
           La perrita de Jenifer se llama Niña, tiene 8 años y su raza es 
           french poodle mini de pelaje color negro y con el pecho de color blanco.
           Es una perrita muy juguetona y a la vez muy dormilona. Aunque coma de 
