--- a/index.html
+++ b/index.html
@@ -100,17 +100,14 @@
       </div>
     </main>
     <footer>
-      <br />
-      <h3>Contáctanos:</h3>
+      <h3 id="h3Footer">Contáctanos:</h3>
+      <div class="e-mail">
       <a href="mailto:inmagonzalez045@gmail.com"
-        >Inma: inmagonzalez045@gmail.com</a
-      >
-      <br />
+        >Inma: inmagonzalez045@gmail.com</a>
       <a href="mailto:jenifermoyano2006@gmail.com"
-        >Jenifer: jenifermoyano2006@gmail.com</a
-      >
-      <br />
-      <p>Inma y Jenifer © 2024. xd</p>
+        >Jenifer: jenifermoyano2006@gmail.com</a>
+      </div>
+      <p>Inma y Jenifer © 2024.</p>
     </footer>
   </body>
 </html>
