--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="ourPets">
         <div class="pet">
           <h3>Mascota de Jeni</h3>
-          <img src="img/photoNiña.jpg" id="photoPets" alt="photo dog Jenn¡i" />
+          <img src="img/photoNiña.jpeg" id="photoPets" alt="photo dog Jeni" />
           <p id="pPets">
             La perrita de Jenifer se llama Niña, tiene 8 años y su raza es
             french poodle mini de pelaje color negro y con el pecho de color
