latest review and corrections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,9 +27,10 @@
             alt="profile picture Jeni"
           />
           <p id="pAboutUs">
-            Mi nombre es Jenifer Moyano Sanromá, tengo 17 años y soy de
-            Barcelona-España, cuando tenía 6 años me mude junto a mi familia a
-            Ecuador (el país de mi padre) y volví después de 11 años.
+            My name is Jenifer Moyano Sanromá, I'm 17 years old and I'm from
+            Barcelona-Spain. Barcelona-Spain, when I was 6 years old, I moved
+            with my family to Ecuador (my father's country) and I came back
+            after 11 years.
           </p>
         </div>
         <div class="aboutUsInma">
@@ -39,75 +40,80 @@
             alt="profile picture Inma"
           />
           <p id="pAboutUs">
-            Mi nombre es Inma y actualmente tengo 21 años, estudié artes en la
-            Escuela de San Telmo y entre en la carrera de Diseño gráfico la cual
-            deje, al año empece a estudiar por mi cuenta algunos lenguajes y a
-            los 19 entre en un ciclo superior de Desarrollo de Aplicaciones Web.
+            My name is Inma and I'm currently 21 years old. School of San Telmo
+            and I entered the career of Graphic Design which I left. a year
+            later I started to study some languages on my own and at the age of
+            19 I 19 years old I entered a higher cycle of Web Application
+            Development.
           </p>
         </div>
       </div>
       <h2 id="ourHobbies">Our Hobbies</h2>
       <div class="hobbies">
         <div class="hobbiesJeni" id="hobbies">
-          <p class="pHobbies">Aficiones de Jenifer</p>
+          <p class="pHobbies">Jenifer's hobbies</p>
           <ul>
-            <li>Escuchar música</li>
-            <li>Leer</li>
-            <li>Ver anime/manga</li>
-            <li>Escribir</li>
+            <li>Listen to music</li>
+            <li>Read</li>
+            <li>Watch anime/manga</li>
+            <li>Write</li>
           </ul>
         </div>
         <div class="hobbiesInma">
-          <p class="pHobbies">Aficiones de Inma</p>
+          <p class="pHobbies">Inma's hobbies</p>
           <ul>
-            <li>Tocar la guitarra</li>
-            <li>Pintar</li>
-            <li>Ver series</li>
-            <li>Jugar videojuegos</li>
+            <li>Playing the guitar</li>
+            <li>Paint</li>
+            <li>See series</li>
+            <li>Playing video games</li>
           </ul>
         </div>
       </div>
       <h2 id="ourPets">Our Pets</h2>
       <div class="ourPets">
         <div class="pet">
-          <h3>Mascota de Jeni</h3>
+          <h3>Jeni's Pet</h3>
           <img src="img/photoNiña.jpeg" id="photoPets" alt="photo dog Jeni" />
           <p id="pPets">
-            La perrita de Jenifer se llama Niña, tiene 8 años y su raza es
-            french poodle mini de pelaje color negro y con el pecho de color
-            blanco. Es una perrita muy juguetona ademas de dormilona y su comida
-            favorita es el pollo.
+            Jenifer's puppy is called Niña, she is 8 years old and her breed is
+            french poodle mini with black coat and white chest. white chest. She
+            is a very playful and sleepy dog and her favourite food is chicken.
+            her favourite food is chicken.
           </p>
         </div>
         <div class="pet">
-          <h3>Mascota de Inma</h3>
+          <h3>Inma's pet</h3>
           <img src="img/petRyu.jpeg" id="photoPets" alt="photo snake Inma" />
           <p id="pPets">
-            Este pequeñin se llama Ryu, es una serpiente de maiz fase snow y que
-            ya tengo de hace casi 5 años. Es muy tranquila en comparación de su
-            hermana Shiva (mi otra serpiente), que es mucho mas revoltosa.
+            This little guy's name is Ryu, he's a snow phase corn snake and he's
+            a I've had him for almost 5 years. He is very calm compared to his
+            sister sister Shiva (my other snake), who is much more unruly.
           </p>
         </div>
         <div class="pet">
-          <h3>Mascota de Inma</h3>
+          <h3>Inma's pet</h3>
           <img src="img/petPancho.jpg" id="photoPets" alt="photo dog Inma" />
           <p id="pPets">
-            Este pequeño es Pancho, un perrito que supuestamente un chihuahua,
-            tiene unos 12 años y es muy jugueton pero lo que mas le gusta es
-            dormir, también es muy comilo, podria estar todo el dia comiendo.
+            This little guy is Pancho, a little dog who is supposed to be a
+            chihuahua, he is about 12 years old and he is very playful but what
+            he likes most is to sleep. He is very playful but his favourite
+            thing is to sleep, he is also a very good eater, he could be eating
+            all day long.
           </p>
         </div>
       </div>
     </main>
     <footer>
-      <h3 id="h3Footer">Contáctanos:</h3>
+      <h3 id="h3Footer">Contact us:</h3>
       <div class="e-mail">
-      <a href="mailto:inmagonzalez045@gmail.com"
-        >Inma: inmagonzalez045@gmail.com</a>
-      <a href="mailto:jenifermoyano2006@gmail.com"
-        >Jenifer: jenifermoyano2006@gmail.com</a>
+        <a href="mailto:inmagonzalez045@gmail.com"
+          >Inma: inmagonzalez045@gmail.com</a
+        >
+        <a href="mailto:jenifermoyano2006@gmail.com"
+          >Jenifer: jenifermoyano2006@gmail.com</a
+        >
       </div>
-      <p>Inma y Jenifer © 2024.</p>
+      <p>Inma and Jenifer © 2024.</p>
     </footer>
   </body>
 </html>
