header and nav arrangement

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <div class="title">
         <h1>Welcome</h1>
       </div>
-      <div class="anchors">
-        <div class="anchor1"><a href="#aboutUs">About Us</a></div>
-        <div class="anchor2"><a href="#ourHobbies">Hobbies</a></div>
-        <div class="anchor3"><a href="#ourPets">Pets</a></div>
-      </div>
     </header>
+    <nav>
+      <div class="anchor1"><a href="#aboutUs">About Us</a></div>
+      <div class="anchor2"><a href="#ourHobbies">Hobbies</a></div>
+      <div class="anchor3"><a href="#ourPets">Pets</a></div>
+    </nav>
     <main>
       <div class="aboutUs" id="aboutUs">
         <h2>About Us</h2>
@@ -106,10 +106,10 @@
     <footer>
       <h3 id="h3Footer">Contact us:</h3>
       <div class="e-mail">
-        <a href="mailto:inmagonzalez045@gmail.com"
+        <a href="mailto:inmagonzalez045@gmail.com" class="aEmail"
           >Inma: inmagonzalez045@gmail.com</a
         >
-        <a href="mailto:jenifermoyano2006@gmail.com"
+        <a href="mailto:jenifermoyano2006@gmail.com" class="aEmail"
           >Jenifer: jenifermoyano2006@gmail.com</a
         >
       </div>
